--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                                         <button type="submit" class="btn btn-primary w-100 py-2 rounded-3 fw-bold shadow-sm" data-i18n="login_btn">تسجيل الدخول</button>
                                     </form>
                                     <div class="mt-4 text-center p-3 bg-light rounded small text-muted border border-dashed">
-                                        <strong data-i18n="demo_accounts">morafik</strong><br>
-                                        
+                                        <strong data-i18n="demo_accounts">مرافق</strong><br>
+                                
                                     </div>
                                 </div>
                                 <!-- Register -->
