--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 
         /* UI Components */
         .hero-header {
-            /* تم تغيير الصورة هنا بصورة أوضح وبجودة عالية تتناسب مع الخلفية الداكنة */
-            background: linear-gradient(rgba(15, 23, 42, 0.85), rgba(30, 41, 59, 0.9)), url('https://images.unsplash.com/photo-1476703993599-0035a21b17a9?auto=format&fit=crop&q=80');
+            /* تم تحسين الرابط هنا: إضافة w=1000 و q=60 لتسريع التحميل بشكل كبير */
+            background-color: #1e293b; /* لون احتياطي يظهر فوراً */
+            background: linear-gradient(rgba(15, 23, 42, 0.85), rgba(30, 41, 59, 0.9)), url('https://images.unsplash.com/photo-1476703993599-0035a21b17a9?auto=format&fit=crop&q=60&w=1000');
             background-size: cover;
             background-position: center;
             padding: 50px 0; text-align: center;
